# ipycalcpad

./: .gitignore  263_criteria.ipynb  lab.sh  lab_help.txt  nohup.out  pip.out  pip.txt  pyproject.toml  requires.txt  todo.md
.aiassistant/rules/: docstring.md
.ipynb_checkpoints/: 263_criteria-checkpoint.ipynb
.old/transform/: __init__.py  callable.py  operators.py  terminals.py  transformed_line.py  transformer.py  unit.md  visitrecord.py
ipycalcpad/: __init__.py  calcpad.py  line.py  magic.py
ipycalcpad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipycalcpad/config/: __init__.py  config.py  config.yaml  format.py
ipycalcpad/config/formats/: number_format.py  pandas_format.py  pint_format.py  string_format.py
ipycalcpad/line/: __init__.py  line.py  line_from_ast.py  long_line.py
ipycalcpad/protocols/: __init__.py  format_type.py  node_type.py
ipycalcpad/transform/: __init__.py  transform_ast.py  transform_pint.py
ipycalcpad/tree/: __init__.py  assign.py  callable.py  node.py
ipycalcpad/tree/operations/: __init__.py  binop.py  binop_ops.py  unaryop.py  unaryop_ops.py
ipycalcpad/tree/terminals/: __init__.py  literal.py  pint_quantity.py  terminal.py  variable.py
ipycalcpad/tree/terminals/literals/: __init__.py  pint_quantity.py
ipycalcpad/utility/: __init__.py  name_utilities.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  jinja_tex.ipynb  test.py
notebooks/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  calcpad-checkpoint.ipynb  test-checkpoint.ipynb
tests/utility/: test_name_utilities.py
(+2 files in other folders)
